      dict is available in the same way regardless of 
      single-execute or executemany-style statement execution.

    - multi-part schema names, i.e. with dots such as 
      "dbo.master", are now rendered in select() labels
      with underscores for dots, i.e. "dbo_master_table_column".
      This is a "friendly" label that behaves better
      in result sets. [ticket:1428]
      
    - Deprecated or removed:
        * "scalar" flag on select() is removed, use 
          select.as_scalar().
        * "shortname" attribute on bindparam() is removed.
        * postgres_returning, firebird_returning flags on 
          insert(), update(), delete() are deprecated, use
          the new returning() method.
        * fold_equivalents flag on join is deprecated (will remain
          until [ticket:1131] is implemented)
    
- engines
  - transaction isolation level may be specified with
    create_engine(... isolation_level="..."); available on
    postgresql and sqlite. [ticket:443]
  
  - fixed the import for entrypoint-driven dialects to 
    not rely upon silly tb_info trick to determine import
    error status.  [ticket:1630]
    
  - added first() method to ResultProxy, returns first row and
    closes result set immediately.

  - RowProxy objects are now pickleable, i.e. the object returned
    by result.fetchone(), result.fetchall() etc.

  - ResultProxy internals have been overhauled to greatly reduce
    method call counts when fetching columns that have no 
    type-level processing applied.   Provides a 100% speed
    improvement when fetching large result sets with no unicode
    conversion as tuples.  Many thanks to Elixir's Gaëtan de Menten
    for this dramatic improvement !  [ticket:1586]

  - Databases which rely upon postfetch of "last inserted id"
    to get at a generated sequence value (i.e. MySQL, MS-SQL)
    now work correctly when there is a composite primary key
    where the "autoincrement" column is not the first primary